--- a/CSS/main_style.css
+++ b/CSS/main_style.css
@@ -1,3 +1,10 @@
+/*
+Colorblind safe color pallete from colorbrewer2.org.
+#2c7bb6 - dark cyan blue
+#0571b0 - blue
+#f7f7f7 - off white
+*/
+
 body {
   background-color: #2c7bb6;
   color: #0571b0;
