--- a/CSS/main_style.css
+++ b/CSS/main_style.css
@@ -6,10 +6,10 @@ Colorblind safe color pallete from colorbrewer2.org.
 */
 
 body {
-  background-color: #2c7bb6;
+  background-color: #f7f7f7;
   color: #0571b0;
   text-align: center;
 }
 h1 {
-  color: #f7f7f7;
+  color: #2c7bb6;
 }
