*changed background color of all headers to blue*

--- a/CSS/main_style.css
+++ b/CSS/main_style.css
@@ -13,3 +13,18 @@ body {
 h1 {
   color: #2c7bb6;
 }
+#body-container{
+
+}
+#header {
+  background-color: #0571b0;
+} /*changed background color of all headers to blue*/
+#profile-picture {
+
+}
+#welcome-text {
+
+}
+#research-interests {
+
+}
