--- a/CSS/main_style.css
+++ b/CSS/main_style.css
@@ -3,18 +3,27 @@ Colorblind safe color pallete from colorbrewer2.org.
 #2c7bb6 - dark cyan blue
 #0571b0 - blue
 #f7f7f7 - off white
+#92c5de - light blue
 */
-
+/*set background color of body to light blue; changed color of text in body to
+blue*/
 body {
-  background-color: #f7f7f7;
+  background-color: #92c5de;
   color: #0571b0;
-  text-align: center;
+  text-align: center
+  margin: 0;
 }
+ /*Changed color of h1 text to off white and added 5 pixels of padding*/
 h1 {
   color: #f7f7f7;
   padding: 5px;
   margin: 0;
-} /*Changed color of h1 text to off white and added 5 pixels of padding*/
+}
+/*formatted the body container by changing background color to offwhite; set
+the width = to 1000px; set the margin automatically horizontally center elements
+with bodycontainer; set height of container to 100 viewport height; set border
+to color offwhite at 2px weight; used border radius to round borders; set
+overflow to hidden which clips what is out of bounds*/
 #body-container{
 background-color: #f7f7f7;
 max-width: #1000px;
@@ -24,14 +33,10 @@ border: 2px solid #f7f7f7;
 border-radius: 25px;
 overflow:hidden;
 }
-/*formatted the body container by changing background color to offwhite; set
-the width = to 1000px; set the margin automatically horizontally center elements
-with bodycontainer; set height of container to 100 viewport height; set border
-to color offwhite at 2px weight; used border radius to round borders; set
-overflow to hidden which clips what is out of bounds*/
+/*changed background color of elements with ID= header to blue*/
 #header {
   background-color: #0571b0;
-} /*changed background color of elements with ID= header to blue*/
+}
 #profile-picture {
 
 }
