assigned profile picture to left side added padding and fontsize

--- a/CSS/main_style.css
+++ b/CSS/main_style.css
@@ -38,10 +38,11 @@ overflow:hidden;
   background-color: #0571b0;
 }
 #profile-picture {
-
+ float:left;
 }
 #welcome-text {
-
+ padding-top: 25px;
+font-size: 25px;
 }
 #research-interests {
 
